--- a/app/src/main/res/layout/activity_material.xml
+++ b/app/src/main/res/layout/activity_material.xml
@@ -21,15 +21,17 @@
 
   </com.google.android.material.appbar.AppBarLayout>
 
-  <include layout="@layout/content_material"/>
+    <include
+        android:id="@+id/content_layout"
+        layout="@layout/content_material" />
 
-  <com.google.android.material.floatingactionbutton.FloatingActionButton
-  android:id="@+id/fab"
-  android:layout_width="wrap_content"
-  android:layout_height="wrap_content"
-  android:layout_gravity="bottom|end"
-  android:layout_marginEnd="@dimen/fab_margin"
-  android:layout_marginBottom="16dp"
-  app:srcCompat="@android:drawable/ic_dialog_email" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="16dp"
+        app:srcCompat="@android:drawable/ic_menu_rotate" />
 
   </androidx.coordinatorlayout.widget.CoordinatorLayout>
